# elec-storage

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
.github/workflows/: c-cpp.yml
TV/: TV.h
enums/: enums.h
fmt/: CMakeLists.txt
fmt/doc/: CMakeLists.txt
fmt/include/fmt/: os.h
fmt/src/: fmt.cc  os.cc
fmt/support/: manage.py
fmt/test/: CMakeLists.txt  format-impl-test.cc
fmt/test/gtest/: CMakeLists.txt
fmt/test/static-export-test/: CMakeLists.txt
sources/: main.cpp
sources/TV/: TV.cpp  TV.h  TV_factory.h
sources/storage/: Fridge.cpp  Fridge.h  Fridge_factory.h  TV.cpp  TV.h  TV_factory.h  elec_storage.h  i_elec_factory.h  i_electronic.h
